@@ -1,3 +1,8 @@
+2006-01-05  David Reveman  <davidr@novell.com>
+
+	* src/cairo-pdf-surface.c (emit_pattern_stops)
+	(emit_linear_pattern, emit_radial_pattern): Track gradient changes.
+
 2006-01-04  Carl Worth  <cworth@cworth.org>
 
 	* Originally: 2005-10-10  David Reveman  <davidr@novell.com>
